update product properties 65:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -40,8 +40,8 @@
                                     <div class="col-xs-6 col-md-5">
                                         <b>EAN: </b>
                                     </div>
-                                    <div class="col-xs-6 col-md-7">
-                                        <span>${ currentVariation.barcodes }</span>
+                                    <div class="col-xs-6 col-md-7" v-for="barcodeRow in currentVariation.barcodes">
+                                        <span v-if="barcodeRow.code">${ cbarcodeRow.code }&nbsp;</span>
                                     </div>
 
                                     <div class="col-xs-6 col-md-5" v-if="currentVariation.item.condition && currentVariation.item.condition.names.name !== '' && (itemConfig.includes('item.condition') || itemConfig.includes('all'))">
