--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -115,6 +115,17 @@
 
                             <graduated-prices></graduated-prices>
 
+                            <div class="crossprice det" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
+                                <del class="text-muted small text-appearance rrp">
+                                    {% if item.documents[0].data.texts.lang == 'en' %}RRP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) } {% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) }{% endif %}
+                                </del>
+                            </div>
+
+                            <div class="discount" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
+                                {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
+                                {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Rabatt:{% endif %} {{ discountNew|round }}%
+                            </div>
+
                             <item-price :show-cross-price="isRecommendedPriceActive"></item-price>
 
                             <slot name="after-price"></slot>
