--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -432,6 +432,6 @@ h1.price {
     }
 
     .other-login-bottom .d-none.d-sm-inline {
-        display: block !important;
+        display: inline-block !important;
     }
 }
