commit 3 - 12.05.2020 - Update the footer homepage

--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -46,7 +46,11 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <span>
-                            Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643
+                            {% if selectLang == 'de' %}
+                                Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Handelsregister: HRB 27197, Registergericht: Amtsgericht Traunstein, Geschäftsführer: Mirko Gutermuth, USt. Identifikation: DE319894643
+                            {% else %}
+                                Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643
+                            {% endif %}
                         </span>
                     </div>
                 </div>
