commit 5 - 12.05.2020 - Update style in product page

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -382,6 +382,19 @@ h1.price {
     background-color: #e3e7eb;
 }
 
+.page-singleitem .price {
+    margin-bottom: 3px;
+}
+
+.page-singleitem .base-price.text-muted.my-3 {
+    margin-top: 0px !important;
+    margin-bottom: 10px !important;
+}
+
+.page-singleitem .availability.badge.availability-5 {
+    margin-bottom: 7px;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
