commit 6 - 12.05.2020 - Update product properties

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -219,7 +219,7 @@
                                                     <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
                                                     <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
                                                     <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
-                                                    <span v-if="propertyRow.valueFloa">${ propertyRow.valueFloat } Millimeter</span>
+                                                    <span v-if="propertyRow.valueFloat">${ propertyRow.valueFloat } Millimeter</span>
                                                     <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }Millimeter</span>
                                                 </div>
                                             </div>
