--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -32,7 +32,7 @@
                                                     </a>
                                                 </user-login-handler>
                                                 <span class="pipe"></span>
-                                                <a href="https://www.blue-berry.eu/{{ lang }}/register">
+                                                <a href="https://www.blue-berry.eu/{{ lang }}/register" class="nav-link">
                                                     <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
                                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                                 </a>
