--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -11,8 +11,9 @@
                             <div class="top-bar-items">
                                 <div class="controls">
                                     <ul id="controlsList" class="controls-list mb-0 d-flex list-inline pl-2 pl-sm-1 pl-md-0">
-                                        <li class="list-inline-item control-user">
+
                                             {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
+                                            <li class="list-inline-item control-user">
                                             <user-login-handler>
                                                 <a data-toggle="modal">
                                                     <i class="mr-1 fa fa-user" aria-hidden="true"></i>
@@ -24,20 +25,27 @@
                                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                                 </a>
                                             </user-login-handler>
+                                            </li>
                                             {% else %}
-                                                <user-login-handler>
-                                                    <a data-toggle="modal">
-                                                        <i class="mr-1 fa fa-user" aria-hidden="true"></i>
-                                                        <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
-                                                    </a>
-                                                </user-login-handler>
-                                                <span class="pipe"></span>
-                                                <a href="https://www.blue-berry.eu/{{ lang }}/register" class="nav-link">
-                                                    <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
-                                                    <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
-                                                </a>
+                                                <li class="list-inline-item control-user">
+                                                    <user-login-handler>
+                                                        <a data-toggle="modal">
+                                                            <i class="mr-1 fa fa-user" aria-hidden="true"></i>
+                                                            <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
+                                                        </a>
+                                                    </user-login-handler>
+                                                </li>
+                                                <li class="list-inline-item control-user">
+                                                    <div class="position-relative">
+                                                        <span class="pipe"></span>
+                                                        <a href="https://www.blue-berry.eu/{{ lang }}/register" class="nav-link">
+                                                            <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
+                                                            <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
+                                                        </a>
+                                                    </div>
+                                                </li>
                                             {% endif %}
-                                        </li>
+
                                         <li class="list-inline-item dropdown control-languages">
                                             <a class="nav-link"
                                                data-toggle="collapse"
