8:Update the header register

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -399,6 +399,10 @@ h1.price {
     display: none;
 }
 
+.list-inline-item.control-user .position-relative.register .nav-link {
+    display: block !important;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
