--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -36,7 +36,7 @@
                                                     </user-login-handler>
                                                 </li>
                                                 <li class="list-inline-item control-user">
-                                                    <div class="position-relative">
+                                                    <div class="position-relative register">
                                                         <span class="pipe"></span>
                                                         <a href="https://www.blue-berry.eu/{{ lang }}/register" class="nav-link">
                                                             <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
