9:Update the header register

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -455,4 +455,8 @@ h1.price {
     .other-login-bottom .d-none.d-sm-inline {
         display: inline-block !important;
     }
+
+    .position-relative.register .hidden-xs-down {
+        display: none;
+    }
 }
