Put view custom

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -1,4 +1,4 @@
-<script type="x/template" data-component="">
+<script type="x/template" data-component="single-item">
     <div>
         <slot :getDataField="getDataField" :getFilteredDataField="getFilteredDataField">
             <div class="single container-max page-content">
