3: 17.07.2020: Put parameter test

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -130,7 +130,9 @@
                 <!-- ./ACCOUNT SETTINGS AREA -->
 
                 <!-- NEWSLETTER ARREA -->
+                <div class="row">
                     {{ app.request.query.get("test") }}
+                </div>
                 <!-- ./NEWSLETTER ARREA -->
 
             </div>
