Update nl zone: 17.07.2020:5

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -131,7 +131,7 @@
 
                 <!-- NEWSLETTER ARREA -->
                 <div class="row">
-                    {{ app.request.query.get("test") }}
+                    {{ app.request.get("test") }}
                 </div>
                 <!-- ./NEWSLETTER ARREA -->
 
