--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -46,7 +46,7 @@
         :billing-address-list="{{ services.customer.getAddresses(1) | json_encode }}"
         :selected-billing-address="{{ services.checkout.getBillingAddressId() | json_encode }}">
         <div>
-            <div class="page-content myaccount aaaaddd container-max mb-5 mt-3 pt-3 bg-white">
+            <div class="page-content myaccount aaaadddss container-max mb-5 mt-3 pt-3 bg-white">
                 <!-- HEADER -->
                 <div class="row mb-5">
                     <div class="col-sm-9">
@@ -131,9 +131,11 @@
 
                 <!-- NEWSLETTER ARREA -->
                 {% set testVariable = request.get("test") %}
-                <div class="row" v-if="testVariable === '1'">
-                    {{ testVariable }} aaa
-                </div>
+                {% if testVariable === '1 %}
+                    <div class="row">
+                        {{ testVariable }} aaa
+                    </div>
+                {% endif %}
                 <!-- ./NEWSLETTER ARREA -->
 
             </div>
