--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -131,7 +131,7 @@
 
                 <!-- NEWSLETTER ARREA -->
                 {% set testVariable = request.get("test") %}
-                {% if testVariable === '1 %}
+                {% if testVariable === '1' %}
                     <div class="row">
                         {{ testVariable }} aaa
                     </div>
