--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -135,6 +135,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <!-- Begin Mailchimp Signup Form -->
+                            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
                             <form action="https://blue-berry.us5.list-manage.com/subscribe/post?u=476dcbd6b813a7385560b85bd&amp;id=160dc3fd94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
