--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -41,6 +41,10 @@
     {% if services.template.getCurrentTemplate() == "tpl.item" %}
         {{ LayoutContainer.show("Ceres::SingleItem.Styles") }}
     {% endif %}
+
+    {% if services.template.getCurrentTemplate() == "tpl.my-account" %}
+        fffff
+    {% endif %}
 </head>
 
 <body class="{{ bodyClasses | join(' ') }}">
