Update nl zone: 17.07.2020:19

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -43,7 +43,7 @@
     {% endif %}
 
     {% if services.template.getCurrentTemplate() == "tpl.my-account" %}
-        fffff
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     {% endif %}
 </head>
 
