--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -46,7 +46,7 @@
         :billing-address-list="{{ services.customer.getAddresses(1) | json_encode }}"
         :selected-billing-address="{{ services.checkout.getBillingAddressId() | json_encode }}">
         <div>
-            <div class="page-content myaccount aaaaddd container-max mb-5 mt-3 pt-3 bg-white">
+            <div class="page-content myaccount aaaadddggg container-max mb-5 mt-3 pt-3 bg-white">
                 <!-- HEADER -->
                 <div class="row mb-5">
                     <div class="col-sm-9">
@@ -137,75 +137,78 @@
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
-                            <form action="https://blue-berry.us5.list-manage.com/subscribe/post?u=476dcbd6b813a7385560b85bd&amp;id=160dc3fd94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                                <div id="mc_embed_signup_scroll">
-                                <h2>Subscribe</h2>
-                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                            <div class="mc-field-group">
-                                <label for="mce-EMAIL">eMail Address / eMail-Adresse  <span class="asterisk">*</span>
-                            </label>
-                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                            </div>
-                            <div class="mc-field-group">
-                                <label for="mce-FNAME">First Name / Vorname  <span class="asterisk">*</span>
-                            </label>
-                                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
-                            </div>
-                            <div class="mc-field-group">
-                                <label for="mce-LNAME">Last Name / Nachname  <span class="asterisk">*</span>
-                            </label>
-                                <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
-                            </div>
-                            <div class="mc-field-group">
-                                <label for="mce-COMPANY">Company / Firma  <span class="asterisk">*</span>
-                            </label>
-                                <input type="text" value="" name="COMPANY" class="required" id="mce-COMPANY">
-                            </div>
-                            <div class="mc-field-group input-group">
-                                <strong>Language / Sprache </strong>
-                                <ul><li><input type="radio" value="16" name="group[11173]" id="mce-group[11173]-11173-0"><label for="mce-group[11173]-11173-0">English</label></li>
-                            <li><input type="radio" value="32" name="group[11173]" id="mce-group[11173]-11173-1"><label for="mce-group[11173]-11173-1">Deutsch</label></li>
-                            </ul>
-                            </div>
-                            <div class="mc-field-group input-group">
-                                <strong>Product Categories / Produktkategorien </strong>
-                                <ul><li><input type="checkbox" value="128" name="group[11169][128]" id="mce-group[11169]-11169-0"><label for="mce-group[11169]-11169-0">Important Information / Wichtige Informationen</label></li>
-                            <li><input type="checkbox" value="1" name="group[11169][1]" id="mce-group[11169]-11169-1"><label for="mce-group[11169]-11169-1">Eyewear / Brillen &amp; Sonnenbrillen</label></li>
-                            <li><input type="checkbox" value="2" name="group[11169][2]" id="mce-group[11169]-11169-2"><label for="mce-group[11169]-11169-2">Watches &amp; Jewelry / Uhren &amp; Schmuck</label></li>
-                            <li><input type="checkbox" value="4" name="group[11169][4]" id="mce-group[11169]-11169-3"><label for="mce-group[11169]-11169-3">Handbags &amp; Accessories / Handtaschen &amp; Accessoires</label></li>
-                            <li><input type="checkbox" value="8" name="group[11169][8]" id="mce-group[11169]-11169-4"><label for="mce-group[11169]-11169-4">Clothing &amp; Shoes / Kleidung &amp; Schuhe</label></li>
-                            <li><input type="checkbox" value="64" name="group[11169][64]" id="mce-group[11169]-11169-5"><label for="mce-group[11169]-11169-5">Electronics / Elektronik</label></li>
-                            </ul>
-                            </div>
-                            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
-                                <div class="content__gdpr">
-                                    <label>Marketing Permsission / Erlaubnis zum Marketing</label>
-                                    <p>Bitte wählen Sie aus wie Sie von uns, der Blue-Berry GmbH, hören möchten:
+                                <form action="https://blue-berry.us5.list-manage.com/subscribe/post?u=476dcbd6b813a7385560b85bd&amp;id=160dc3fd94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                    <div id="mc_embed_signup_scroll">
+                                        <h2>Newsletter</h2>
+                                        <div class="col-md-6 col-xs-12">
+                                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                            <div class="mc-field-group">
+                                                <label for="mce-EMAIL">eMail Address / eMail-Adresse  <span class="asterisk">*</span>
+                                            </label>
+                                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                                            </div>
+                                            <div class="mc-field-group">
+                                                <label for="mce-FNAME">First Name / Vorname  <span class="asterisk">*</span>
+                                            </label>
+                                                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                                            </div>
+                                            <div class="mc-field-group">
+                                                <label for="mce-LNAME">Last Name / Nachname  <span class="asterisk">*</span>
+                                            </label>
+                                                <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                                            </div>
+                                            <div class="mc-field-group">
+                                                <label for="mce-COMPANY">Company / Firma  <span class="asterisk">*</span>
+                                            </label>
+                                                <input type="text" value="" name="COMPANY" class="required" id="mce-COMPANY">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xs-12">
+                                            <div class="mc-field-group input-group">
+                                                <strong>Language / Sprache </strong>
+                                                <ul><li><input type="radio" value="16" name="group[11173]" id="mce-group[11173]-11173-0"><label for="mce-group[11173]-11173-0">English</label></li>
+                                            <li><input type="radio" value="32" name="group[11173]" id="mce-group[11173]-11173-1"><label for="mce-group[11173]-11173-1">Deutsch</label></li>
+                                            </ul>
+                                            </div>
+                                            <div class="mc-field-group input-group">
+                                                <strong>Product Categories / Produktkategorien </strong>
+                                                <ul><li><input type="checkbox" value="128" name="group[11169][128]" id="mce-group[11169]-11169-0"><label for="mce-group[11169]-11169-0">Important Information / Wichtige Informationen</label></li>
+                                            <li><input type="checkbox" value="1" name="group[11169][1]" id="mce-group[11169]-11169-1"><label for="mce-group[11169]-11169-1">Eyewear / Brillen &amp; Sonnenbrillen</label></li>
+                                            <li><input type="checkbox" value="2" name="group[11169][2]" id="mce-group[11169]-11169-2"><label for="mce-group[11169]-11169-2">Watches &amp; Jewelry / Uhren &amp; Schmuck</label></li>
+                                            <li><input type="checkbox" value="4" name="group[11169][4]" id="mce-group[11169]-11169-3"><label for="mce-group[11169]-11169-3">Handbags &amp; Accessories / Handtaschen &amp; Accessoires</label></li>
+                                            <li><input type="checkbox" value="8" name="group[11169][8]" id="mce-group[11169]-11169-4"><label for="mce-group[11169]-11169-4">Clothing &amp; Shoes / Kleidung &amp; Schuhe</label></li>
+                                            <li><input type="checkbox" value="64" name="group[11169][64]" id="mce-group[11169]-11169-5"><label for="mce-group[11169]-11169-5">Electronics / Elektronik</label></li>
+                                            </ul>
+                                            </div>
+                                            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
+                                                <div class="content__gdpr">
+                                                    <label>Marketing Permsission / Erlaubnis zum Marketing</label>
+                                                    <p>Bitte wählen Sie aus wie Sie von uns, der Blue-Berry GmbH, hören möchten:
 
-                            Please select the ways how you want to hear form us, the Blue-Berry GmbH: </p>
-                                    <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-                                    <label class="checkbox subfield" for="gdpr_1"><input type="checkbox" id="gdpr_1" name="gdpr[1]" value="Y" class="av-checkbox gdpr"><span>eMail / eMail</span> </label><label class="checkbox subfield" for="gdpr_5"><input type="checkbox" id="gdpr_5" name="gdpr[5]" value="Y" class="av-checkbox gdpr"><span>Direct mail / Postwurfsendung</span> </label><label class="checkbox subfield" for="gdpr_9"><input type="checkbox" id="gdpr_9" name="gdpr[9]" value="Y" class="av-checkbox gdpr"><span>Customized online advertising / Maßgeschneiderte Online-Werbung</span> </label>
-                                    </fieldset>
-                                    <p>Sie können sich jederzeit abmelden, indem Sie auf den Link in der Fußzeile unserer eMails klicken. Informationen zu unseren Datenschutzpraktiken finden Sie auf unserer Website.
+                                            Please select the ways how you want to hear form us, the Blue-Berry GmbH: </p>
+                                                    <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+                                                    <label class="checkbox subfield" for="gdpr_1"><input type="checkbox" id="gdpr_1" name="gdpr[1]" value="Y" class="av-checkbox gdpr"><span>eMail / eMail</span> </label><label class="checkbox subfield" for="gdpr_5"><input type="checkbox" id="gdpr_5" name="gdpr[5]" value="Y" class="av-checkbox gdpr"><span>Direct mail / Postwurfsendung</span> </label><label class="checkbox subfield" for="gdpr_9"><input type="checkbox" id="gdpr_9" name="gdpr[9]" value="Y" class="av-checkbox gdpr"><span>Customized online advertising / Maßgeschneiderte Online-Werbung</span> </label>
+                                                    </fieldset>
+                                                    <p>Sie können sich jederzeit abmelden, indem Sie auf den Link in der Fußzeile unserer eMails klicken. Informationen zu unseren Datenschutzpraktiken finden Sie auf unserer Website.
 
-                            You can unsubscribe from the list anytime by clicking onto the links in our eMail footer.
+                                            You can unsubscribe from the list anytime by clicking onto the links in our eMail footer.
 
-                            More information you will find in the privacy policy at our website.</p>
-                                </div>
-                                <div class="content__gdprLegal">
-                                    <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
-                                </div>
+                                            More information you will find in the privacy policy at our website.</p>
+                                                </div>
+                                                <div class="content__gdprLegal">
+                                                    <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
+                                                </div>
+                                            </div>
+                                            <div id="mce-responses" class="clear">
+                                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                                <div class="response" id="mce-success-response" style="display:none"></div>
+                                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_476dcbd6b813a7385560b85bd_160dc3fd94" tabindex="-1" value=""></div>
+                                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                                <div id="mce-responses" class="clear">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_476dcbd6b813a7385560b85bd_160dc3fd94" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                                </div>
-                            </form>
-                            </div>
-
                         </div>
                     </div>
                 {% endif %}
